tests/errors/bad-binary-digit/main.pa
# A binary literal with a digit outside 0/1.
def main = 0b12
